<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shopper</string>
    <string name="empty" translatable="false">""</string>
    <string name="userName">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password_empty">Please enter your password.</string>
    <string name="OK">OK</string>
    <string name="noHistory">No history available</string>
    <string name="selectTwoDates">Select two dates</string>
    <string name="message">message</string>
    <string name="emailAddress">Email Address</string>
    <string name="or">OR</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="next">Next</string>
    <string name="empty_name">Please enter your valid name.</string>
    <string name="email_empty">Please enter your email.</string>
    <string name="invalid_email">Please enter a valid email.</string>
    <string name="phone_empty">Please enter your phone number.</string>
    <string name="invalid_phone">Please enter a valid phone number.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="needHelp">Need Help?</string>
    <string name="addInventary">Inventory</string>
    <string name="orderID">Order ID</string>
    <string name="now">Now</string>
    <string name="asap">ASAP</string>
    <string name="printOrder">Print Order</string>
    <string name="currentOrder">Current Order</string>
    <string name="pastOrders">Past Orders</string>
    <string name="accept">Accept</string>
    <string name="reject">Deny</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="dispatch">Auto Dispatch</string>
    <string name="cancel">Cancel</string>
    <string name="orders">Orders</string>
    <string name="paymentType">Payment</string>
    <string name="dueIn">Due IN</string>
    <string name="orderType" tools:ignore="ExtraTranslation">Order Type</string>
    <string name="deliverTo">Deliver To</string>
    <string name="driverDeta">driver details</string>
    <string name="waitingForDriver">Waiting for the driver</string>
    <string name="total">Total</string>
    <string name="edit">Edit</string>
    <string name="subTotal">Sub Total</string>
    <string name="deliveryCharge">Delivery Charge</string>
    <string name="discount">Discount Incl</string>
    <string name="serviceCharge">Service Charge</string>
    <string name="comments">Comments</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="pickUp">PickUp Ready </string>
    <string name="pickup">PickUp</string>
    <string name="ready">Ready</string>
    <string name="delay">Delay</string>
    <string name="picked">PickUp Complete</string>
    <string name="completed">Completed</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="orderDueAt">Order Due At</string>
    <string name="currentDelay">Current DElay</string>
    <string name="enterYourReason">Enter your reason</string>
    <string name="selectReason">Please select a reason.</string>
    <string name="selectDelay">Please select delay.</string>
    <string name="onlineDrivers">Online Drivers</string>
    <string name="assign">Manual Assign</string>
    <string name="quantityError">please enetr valid quantity.</string>
    <string name="save">Save</string>
    <string name="changeLang">Language</string>
    <string name="New">New</string>
    <string name="Now">New</string>
    <string name="accepted">Accepted</string>
    <string name="inDispatch">In Dispatch</string>
    <string name="networkError">Please Check your Internet Connection</string>
    <string name="no_order">No order available!</string>
    <string name="search">Search by order id or name</string>
    <string name="new_search">Search New Orders</string>
    <string name="pick_up_search">Search Pickup Orders</string>
    <string name="picked_search">Search Picked Orders</string>
    <string name="preparing_search">Search Preparing Orders</string>
    <string name="ready_search">Search Ready Orders</string>
    <string name="tax">Tax </string>
    <string name="searchText">Scanning... please wait</string>
    <string name="dealy_order">Delay Order</string>
    <string name="name">Name</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="delete">Delete</string>
    <string name="Update">Update</string>
    <string name="wallet">Wallet</string>
    <string name="selectStore">Select Store</string>
    <string name="drivers">Driver\'s</string>
    <string name="delivery">Delivery</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="inventory">Inventory</string>
    <string name="inProgress">Washing</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="ChoosefromGallery">Choose from Gallery</string>
    <string name="AddPhoto">Add Photo!</string>
    <string name="somethingWentWrong">Oops ! Something went wrong.Please try again</string>
    <string name="laundryPhotos">laundry photos</string>
    <string name="cleaningFee">Cleaning Fee</string>
    <string name="status">Status</string>
    <string name="deliveredBy">Delivered By</string>
    <string name="storeEarning">Store Earning</string>
    <string name="allCustomerName">Customer Name</string>
    <string name="customer">Customer</string>
    <string name="orderDetails">Order Details</string>
    <string name="ok">OK</string>
    <string name="sureForDelete">Are you sure you want to delete?</string>
    <string name="displayDates">Select Dates</string>
    <string name="inDispatchPro">Auto-Dispatch Inprogress</string>
    <string name="inDispatchFai">Auto-Dispatch Failed</string>
    <string name="recentTransactions">Recent Transactions</string>
    <string name="transactionID">Txn. ID &#58; </string>
    <string name="bookingID">Booking ID &#58; </string>
    <string name="all">ALl</string>
    <string name="debit">DEBIT</string>
    <string name="credit">CREDIT</string>
    <string name="items">Items</string>
    <string name="wait">Please Wait&#8230;.</string>
    <string name="current_credit">CURRENT CREDIT</string>
    <string name="no_transactions_done">No transactions done</string>
    <string name="pleaseWait">Please wait</string>
    <string name="editOrderWarning">you can\'t edit this order</string>
    <string name="loading">Loading&#8230;</string>
    <string name="enterAccountNo">Enter Account No</string>
    <string name="enterRoutinNo">Routing number should be 9 digits</string>
    <string name="enterAccountHoldername">Enter Account Holder Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="removephoto">Remove Photo</string>
    <string name="addPhotoHeader">Add Photo</string>
    <string name="takePhoto">Take Photo</string>
    <string name="cho0seFromGallery">Choose From Gallery</string>
    <string name="countyM">Country*</string>
    <string name="nameM">Name*</string>
    <string name="addBank">Add Bank</string>
    <string name="addStripeAcount">Add Stripe Account</string>
    <string name="accountAdditionError">Unable to add account</string>
    <string name="step_1_connect_your_stripe_account">STEP 1 : CONNECT TO YOUR STRIPE ACCOUNT.</string>
    <string name="connect_stripe_account">Connect stripe account</string>
    <string name="stripe_account_no_xxxx">Stripe Account No : xxxxx</string>
    <string name="step_2_link_bank_account">STEP 2 : LINK BANK ACCOUNT</string>
    <string name="link_bank_account">Link bank account</string>
    <string name="enterDob">Enter Dob</string>
    <string name="enterPersonalid">Enter SSN</string>
    <string name="enterState">Enter State</string>
    <string name="enterPostalCode">Enter Zip Code</string>
    <string name="enterCity">Enter City</string>
    <string name="enterAddress">Enter Address</string>
    <string name="note">Note!</string>
    <string name="plsUploadIdProf">Please Upload Id proof</string>
    <string name="accno">Account Number*</string>
    <string name="rountinNo">Routing Number*</string>
    <string name="photoID">Upload Photo Id</string>
    <string name="dobHint">Date of Birth</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="FIRSTNAME">First Name</string>
    <string name="LASTNAME">Last Name</string>
    <string name="SSN">SSN*</string>
    <string name="zipCode">Zip Code</string>
    <string name="accountDetails">Account Details</string>
    <string name="accountHolder">Account Holder :</string>
    <string name="accnolabel">Account No :</string>
    <string name="rountinNoLabel">Routing No :</string>
    <string name="bankName">Bank Name :</string>
    <string name="county">Country :</string>
    <string name="currency">"$"</string>
    <string name="makeDefault">Make Default</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="version">App Version</string>
    <string name="language">Language</string>
    <string name="create_order">Create New Order</string>
    <string name="choose_order_type">choose the order type</string>
    <string name="send_package">Send Package</string>
    <string name="howtheOrder">How do you want to get your order</string>
    <string name="chooseorderType">please choose  order type</string>
    <string name="orderForm">Order Form</string>
    <string name="findCustomer">Find customer</string>
    <string name="chooseOrAddCustomer">Choose or Add customer to process</string>
    <string name="pickUpAdd">pickup address</string>
    <string name="choosePickUp">Choose pickup location</string>
    <string name="deliAdd">Delivery address</string>
    <string name="choosedeliLoc">Choose delivery location</string>
    <string name="searchCustomer">Search Customer</string>
    <string name="addCustomer">Add Customer</string>
    <string name="delType">delivery type</string>
    <string name="addPlus">+Add</string>
    <string name="add_new_address">Add new address</string>
    <string name="noSavedAddress">No saved addresses</string>
    <string name="home">Manage Orders</string>
    <string name="work">Work</string>
    <string name="other">Others</string>
    <string name="savedAddress">Saved Addresses</string>
    <string name="manageAddress">Manage Addresses</string>
    <string name="selectAddress">Select Address</string>
    <string name="selectSaveAs">please select save as</string>
    <string name="saveDeliveryLocation">Delivery address</string>
    <string name="housenO">HOUSE/FLAT NO</string>
    <string name="landMark">Landmark</string>
    <string name="saveAs">SAVE AS</string>
    <string name="saveAddress">Save Address</string>
    <string name="skip">Skip</string>
    <string name="locationPermission">Please allow DelivX Store to access this device’s location</string>
    <string name="quantity">Quantity</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="manageOrders">Manage Orders</string>
    <string name="transactions">Transactions</string>
    <string name="allTrans">All Transactions</string>
    <string name="debitTransactions">Debit Transactions</string>
    <string name="creditTransaction">Credit Transactions</string>
    <string name="bankDetails">Bank Details</string>
    <string name="notifications">Notifications</string>
</resources>