<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dpThirty">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dpTwenty"
        android:layout_marginTop="@dimen/dpThirty"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/transactions"
        android:textAlignment="viewStart"
        android:textColor="@color/invoiceColor"
        android:textSize="@dimen/spTwenty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAllTrans"
        style="@style/TransactionBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allTrans"
        app:layout_constraintTop_toBottomOf="@id/tvHeading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDebitTrans"
        style="@style/TransactionBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debitTransactions"
        app:layout_constraintTop_toBottomOf="@id/tvAllTrans" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreditTrans"
        style="@style/TransactionBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditTransaction"
        app:layout_constraintTop_toBottomOf="@id/tvDebitTrans" />

</androidx.constraintlayout.widget.ConstraintLayout>