<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/smokewhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tvBankDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/addStripeAcount"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:layout_margin="@dimen/sixteenDp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photoID"
                android:textColor="@color/lightBlackText" />

            <ImageView
                android:id="@+id/ivAddFile"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="5dp"
                android:src="@drawable/vector_add_file" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/FIRSTNAME"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/etLName"
                        android:singleLine="true"
                        android:textColor="@color/lightBlackText"
                        android:textColorHint="@color/lightBlackText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@id/etLName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/LASTNAME"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/lightBlackText"
                        android:textColorHint="@color/lightBlackText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dobHint"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:singleLine="true"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPersonalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPersonalId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SSN"
                    android:inputType="number"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/countyM"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zipCode"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/lightBlackText"
                    android:textColorHint="@color/lightBlackText"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>
